# peico-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/personas/: personas.yaml
data/reference/: coverages.yaml  discounts.yaml  eligibility_rules.yaml  kb_documents.yaml  product_lines.yaml  promotions.yaml  rate_tables.yaml  regions.yaml  reps.yaml  required_disclosures.yaml  tier_coverage_defaults.yaml  tiers.yaml
docs/: 00-design-principles.md  01-world-model.md  02-data-model.md  03-rating-engine.md  04-data-generation.md  05-benchmark-design.md  06-lore-and-quirks.md  07-interface-and-access.md  08-agent-interface-and-harness-spec.md
src/peico/: __init__.py  build_reference.py  generate.py  personas_card.py  rating.py  review_card.py  schema.sql  schema_entities.sql
src/peico/harness/: __init__.py  agent_client.py  changeset.py  checks.py  config.py  environment.py  llm.py  orchestrator.py  runner.py  simulator.py  task.py  world.py
tasks/: update_contact_email.yaml
tests/: test_rating.py
