[project]
name = "peico"
version = "0.1.0"
description = "PEICO benchmark: insurance data domain, rating engine, and the agent-evaluation harness"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # The harness owns and powers the customer simulator and the LLM judge, so the
    # bench (not just an agent) needs a model client. The dataset/rating core does
    # not import these, but the harness does.
    "litellm>=1.40",
    "python-dotenv>=1.0",
]

[project.scripts]
peico-eval = "peico.harness.runner:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
